<resources>
    <string name="app_name">To visit in the Stockholm area</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="Password">Password</string>
    <string name="logged_as">Logged as</string>
    <string name="visit">visit</string>
    <string name="where">Where</string>
    <string name="categories">Categories</string>
    <string name="time_of_the_year">Time of the year</string>
    <string name="how">How</string>
    <string name="organisation">Organisation</string>
    <string name="price_category">Price category</string>
    <string name="time">Time</string>
    <string name="loading">Loading ...</string>
</resources>