<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentVisit">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_what_ind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/visit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_loading_ind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:stretchColumns="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_what_ind">

                <TableRow>

                    <TextView
                        android:padding="3dip"
                        android:text="@string/where" />

                    <TextView
                        android:id="@+id/tv_where_ind"
                        android:gravity="end"
                        android:padding="3dip"
                        android:text="@string/where" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:padding="3dip"
                        android:text="@string/categories" />

                    <TextView
                        android:id="@+id/tv_cat_ind"
                        android:gravity="end"
                        android:padding="3dip"
                        android:text="@string/categories" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:padding="3dip"
                        android:text="@string/time_of_the_year" />

                    <TextView
                        android:id="@+id/tv_toy_ind"
                        android:gravity="end"
                        android:padding="3dip"
                        android:text="@string/time_of_the_year" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:padding="3dip"
                        android:text="@string/how" />

                    <TextView
                        android:id="@+id/tv_how_ind"
                        android:gravity="end"
                        android:padding="3dip"
                        android:text="@string/how" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:padding="3dip"
                        android:text="@string/organisation" />

                    <TextView
                        android:id="@+id/tv_eoo_ind"
                        android:gravity="end"
                        android:padding="3dip"
                        android:text="@string/organisation" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:padding="3dip"
                        android:text="@string/price_category" />

                    <TextView
                        android:id="@+id/tv_price_cat_ind"
                        android:gravity="end"
                        android:padding="3dip"
                        android:text="@string/price_category" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:padding="3dip"
                        android:text="@string/time" />

                    <TextView
                        android:id="@+id/tv_time_ind"
                        android:gravity="end"
                        android:padding="3dip"
                        android:text="@string/time" />
                </TableRow>

            </TableLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</FrameLayout>